# EZCipher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: precompile.h  scenemgr.h  typedefs.h
include/ciphers/: AES.h  defs.h
include/components/: FileInput.h  NodeAES.h  NodeCompare.h  NodeDecoder.h  NodeEncoder.h  TextInput.h  TextView.h
include/datatypes/: ByteArray.h
source/: scenemgr.cpp  widget.cpp
source/ciphers/: AES.cpp
source/components/: FileInput.cpp  NodeAES.cpp  NodeCompare.cpp  NodeDecoder.cpp  NodeEncoder.cpp  TextInput.cpp  TextView.cpp
source/datatypes/: ByteArray.cpp
